--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div class="Container">
       <h1>My DOM Projects</h1>
-      <ul>
+      <ul class="allLists">
         <li class="list list1">
-          <a href="project1/index.html" target="_blank">Project 1</a>
+          <a href="project1/index.html"  target="_blank">Project 1</a>
         </li>
         <li class="list list2">
           <a href="project2/index.html" target="_blank">Project 2</a>
